<resources>
    <string name="app_name">Troppical</string>
    <string name="about">ABOUT</string>
    <string name="latest_version">LATEST VERSION</string>
    <string name="install">Install</string>
    <string name="uninstall">Uninstall</string>
    <string name="open">Open</string>
    <string name="update">Update</string>
    <string name="network_error_title">Network Error</string>
    <string name="network_error_desc">Unable to connect to the internet. Please check your network connection and try again.</string>
    <string name="server_error_title">Server Error</string>
    <string name="server_error_desc">An error occurred while communicating with the server. Please try again later.</string>
    <string name="select_variant">Select Variant</string>
</resources>
