<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="top|center"
    android:padding="10dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:cardCornerRadius="18dp"
        android:layout_marginTop="10dp"
        app:strokeWidth="0dp">
        <ImageView
            android:id="@+id/emulator_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?colorSurfaceVariant"/>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="30dp">

        <TextView
            android:id="@+id/emulator_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/emulator_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:alpha="0.76"
            android:textSize="15sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latest_version"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/emulator_latest_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:alpha="0.76"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:gravity="end|center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uninstall"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uninstall"
            android:textColor="?colorOnSurface"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginHorizontal="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/install"
            android:paddingHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/install"
            android:textColor="?colorOnPrimary"
            android:backgroundTint="?colorPrimary"
            app:rippleColor="?colorOnPrimary"/>

    </LinearLayout>
</LinearLayout>
